--- a/CoreApiDirect/CoreApiDirect.csproj
+++ b/CoreApiDirect/CoreApiDirect.csproj
@@ -15,6 +15,7 @@
     <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
     <LangVersion>7.3</LangVersion>
     <PackageProjectUrl>https://github.com/pavlospap/CoreAPIDirect</PackageProjectUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
