--- a/CoreApiDirect.Demo.Minimum/CoreApiDirect.Demo.Minimum.csproj
+++ b/CoreApiDirect.Demo.Minimum/CoreApiDirect.Demo.Minimum.csproj
@@ -7,7 +7,7 @@
     <Product>CoreAPIDirect.Demo.Minimum</Product>
     <Description>Minimum demo for the CoreAPIDirect library</Description>
     <Copyright>Copyright © Pavlos Papadopoulos 2018</Copyright>
-    <LangVersion>7.3</LangVersion>
+    <LangVersion>latest</LangVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
