--- a/CoreApiDirect/CoreApiDirect.csproj
+++ b/CoreApiDirect/CoreApiDirect.csproj
@@ -16,6 +16,7 @@
     <LangVersion>latest</LangVersion>
     <PackageProjectUrl>https://github.com/pavlospap/CoreAPIDirect</PackageProjectUrl>
     <Version>1.0.3</Version>
+    <PackageIconUrl>https://github.com/pavlospap/CoreAPIDirect/raw/master/logo.png</PackageIconUrl>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
